# WebServerProject

./: README.md  bot.py  forms.py  main.py  pyproject.toml  requirements.txt  Документация.docx  ТЗ
data/: Books.py  __all_models.py  auth_data.py  author.py  author_resource.py  books.py  books_resource.py  card_algs.py  genres.py  text.txt  users.py  users_recource.py
db/: book_shop.sqlite
static/css/: style.css
templates/: addauthor.html  addbooks.html  addgenre.html  authors.html  base.html  basket.html  books.html  books_review.html  books_review_show.html  contacts.html  credit_card.html  genres.html  main.html  maps.html  register.html  req_book.html  searchauthor.html  searchgenre.html  searchprice.html  users.html
